--- a/count-pdfs/requirements.txt
+++ b/count-pdfs/requirements.txt
@@ -1,2 +1,11 @@
+et-xmlfile==1.1.0
+numpy==1.26.4
+openpyxl==3.1.2
+pandas==2.2.0
 PyMuPDF==1.23.22
 PyMuPDFb==1.23.22
+python-dateutil==2.8.2
+python-dotenv==1.0.1
+pytz==2024.1
+six==1.16.0
+tzdata==2024.1
