--- a/count-pdfs/requirements.txt
+++ b/count-pdfs/requirements.txt
@@ -2,6 +2,7 @@ et-xmlfile==1.1.0
 numpy==1.26.4
 openpyxl==3.1.2
 pandas==2.2.0
+pyarrow==15.0.0
 PyMuPDF==1.23.22
 PyMuPDFb==1.23.22
 python-dateutil==2.8.2
