fixed example .env

--- a/count-pdfs/example.env
+++ b/count-pdfs/example.env
@@ -1,11 +1,11 @@
 ### EXAMPLE .ENV FILE ###
 # Paths to folders
-FOLDER_PATH_1=r"C:\path\to\folder1"
-FOLDER_PATH_2=r"C:\path\to\folder2"
-FOLDER_PATH_3=r"C:\path\to\folder3"
-FOLDER_PATH_4=r"C:\path\to\folder4"
+FOLDER_PATH_1="C:\\path\\to\\folder1"
+FOLDER_PATH_2=
+FOLDER_PATH_3= 
+FOLDER_PATH_4=r
 
 # Output path
-OUTPUT_PATH=r"C:\path\to\output\output.xlsx"
+OUTPUT_PATH=C:\\path\\to\\output.xlsx
 
 ### EXAMPLE .ENV FILE ###
